# arvel-ai

./: .gitleaks.toml  CHANGELOG.md  Makefile  README.md  docker-compose.test.yml  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml  release.yml  security.yml
docs/: configuration.md  gateway.md  getting-started.md  mcp.md  workflows.md
src/arvel_ai/: __init__.py  commands.py  config.py  contracts.py  drivers.py  events.py  facade.py  facade.pyi  manager.py  mcp.py  provider.py  resource.py  routes.py  settings.py
src/arvel_ai/drivers/: __init__.py  _openai_format.py  any_llm.py  fake.py  litellm.py  openai_compatible.py
src/arvel_ai/workflows/: __init__.py  contracts.py  facade.py  facade.pyi  manager.py
src/arvel_ai/workflows/drivers/: __init__.py  fake.py  queue.py  temporal.py
tests/: conftest.py  litellm-proxy.yaml  sample_mcp_tools.py  test_any_llm.py  test_gateway.py  test_integration_endpoint.py  test_litellm.py  test_live_providers.py  test_mcp.py  test_mcp_wiring.py  test_observability.py  test_openai_compatible.py  test_provider.py  test_resource.py  test_workflow_temporal.py  test_workflows.py
