[project]
name = "arvel-ai"
dynamic = [
  "version",
] # single-sourced from arvel_ai.__version__ (release-please managed)
description = "One stable, typed, async API over many AI providers — plus an MCP server — for the arvel framework."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["arvel", "ai", "llm", "mcp", "gateway", "litellm", "openai"]
dependencies = ["arvel", "msgspec"]

# Each heavy driver engine gets an extra — apps install only what they use, and
# MissingExtraError points at the fix: uv add 'arvel-ai[<extra>]'. httpx is not
# here: it's an arvel core dependency, so the openai_compatible driver always has it.
[project.optional-dependencies]
litellm = ["litellm"]

# Installing this package auto-registers the provider — the host app edits nothing.
[project.entry-points."arvel.providers"]
ai = "arvel_ai.provider:AiServiceProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/arvel_ai/__init__.py" # reads __version__ — one source of truth

[tool.hatch.build.targets.wheel]
packages = ["src/arvel_ai"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pyright",
    "import-linter",
    "bandit",
    "pip-audit",
    "httpx",
    "pre-commit",
    "pyjwt[crypto]",  # exercise the OIDC MCP auth path (arvel[jwt] in production)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = ["litellm.*", "jwt.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.importlinter]
root_package = "arvel_ai"
include_external_packages = true

# The light-import discipline, enforced in CI (same rule arvel core lives by):
# heavy engines never appear on the module import path — drivers lazy-import
# them inside the method that uses them. List each engine you add here.
# The anti-corruption layer, enforced: no engine type ever crosses into the
# public surface — litellm exists only inside its own driver module,
# the openai_compatible driver goes through arvel's Http client,
# which wraps the engine.
[[tool.importlinter.contracts]]
name = "heavy engines stay out of the import path"
type = "forbidden"
source_modules = ["arvel_ai"]
forbidden_modules = ["litellm", "httpx"]
# the ONLY sanctioned edge: the engine inside its own driver module, lazily
ignore_imports = [
    "arvel_ai.drivers.litellm -> litellm",
]
