[project]
name = "arvel-ai"
dynamic = [
  "version",
] # single-sourced from arvel_ai.__version__ (release-please managed)
description = "One stable, typed, async API over many AI providers — plus an MCP server — for the arvel framework."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["arvel", "ai", "llm", "mcp", "gateway", "any-llm", "openai"]
dependencies = ["arvel", "msgspec"]

# Each heavy driver engine gets an extra — apps install only what they use, and
# MissingExtraError points at the fix: uv add 'arvel-ai[<extra>]'. httpx is not
# here: it's an arvel core dependency, so the openai_compatible driver always has it.
# One extra per any-llm provider, mirroring any-llm-sdk's own extras (each carries that
# provider's SDK), so `uv add 'arvel-ai[anthropic]'` is the whole install for the any_llm
# driver against Anthropic. `any-llm` is the bare SDK (no provider), `all` every provider.
[project.optional-dependencies]
any-llm = ["any-llm-sdk>=1.21"]
all = ["any-llm-sdk[all]>=1.21"]
anthropic = ["any-llm-sdk[anthropic]>=1.21"]
atlascloud = ["any-llm-sdk[atlascloud]>=1.21"]
azure = ["any-llm-sdk[azure]>=1.21"]
azureanthropic = ["any-llm-sdk[azureanthropic]>=1.21"]
azureopenai = ["any-llm-sdk[azureopenai]>=1.21"]
bedrock = ["any-llm-sdk[bedrock]>=1.21"]
cascadia = ["any-llm-sdk[cascadia]>=1.21"]
cerebras = ["any-llm-sdk[cerebras]>=1.21"]
cohere = ["any-llm-sdk[cohere]>=1.21"]
dashscope = ["any-llm-sdk[dashscope]>=1.21"]
databricks = ["any-llm-sdk[databricks]>=1.21"]
deepinfra = ["any-llm-sdk[deepinfra]>=1.21"]
deepseek = ["any-llm-sdk[deepseek]>=1.21"]
fireworks = ["any-llm-sdk[fireworks]>=1.21"]
gemini = ["any-llm-sdk[gemini]>=1.21"]
github = ["any-llm-sdk[github]>=1.21"]
gmi = ["any-llm-sdk[gmi]>=1.21"]
groq = ["any-llm-sdk[groq]>=1.21"]
huggingface = ["any-llm-sdk[huggingface]>=1.21"]
inception = ["any-llm-sdk[inception]>=1.21"]
llama = ["any-llm-sdk[llama]>=1.21"]
llamacpp = ["any-llm-sdk[llamacpp]>=1.21"]
llamafile = ["any-llm-sdk[llamafile]>=1.21"]
lmstudio = ["any-llm-sdk[lmstudio]>=1.21"]
minimax = ["any-llm-sdk[minimax]>=1.21"]
mistral = ["any-llm-sdk[mistral]>=1.21"]
moonshot = ["any-llm-sdk[moonshot]>=1.21"]
mzai = ["any-llm-sdk[mzai]>=1.21"]
nebius = ["any-llm-sdk[nebius]>=1.21"]
neosantara = ["any-llm-sdk[neosantara]>=1.21"]
ollama = ["any-llm-sdk[ollama]>=1.21"]
openai = ["any-llm-sdk[openai]>=1.21"]
openrouter = ["any-llm-sdk[openrouter]>=1.21"]
otari = ["any-llm-sdk[otari]>=1.21"]
perplexity = ["any-llm-sdk[perplexity]>=1.21"]
portkey = ["any-llm-sdk[portkey]>=1.21"]
qiniu = ["any-llm-sdk[qiniu]>=1.21"]
requesty = ["any-llm-sdk[requesty]>=1.21"]
sagemaker = ["any-llm-sdk[sagemaker]>=1.21"]
sambanova = ["any-llm-sdk[sambanova]>=1.21"]
telnyx = ["any-llm-sdk[telnyx]>=1.21"]
together = ["any-llm-sdk[together]>=1.21"]
vertexai = ["any-llm-sdk[vertexai]>=1.21"]
vertexaianthropic = ["any-llm-sdk[vertexaianthropic]>=1.21"]
vllm = ["any-llm-sdk[vllm]>=1.21"]
voyage = ["any-llm-sdk[voyage]>=1.21"]
watsonx = ["any-llm-sdk[watsonx]>=1.21"]
xai = ["any-llm-sdk[xai]>=1.21"]
zai = ["any-llm-sdk[zai]>=1.21"]

# Installing this package auto-registers the provider — the host app edits nothing.
[project.entry-points."arvel.providers"]
ai = "arvel_ai.provider:AiServiceProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/arvel_ai/__init__.py" # reads __version__ — one source of truth

[tool.hatch.build.targets.wheel]
packages = ["src/arvel_ai"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pyright",
    "import-linter",
    "bandit",
    "pip-audit",
    "httpx",
    "pre-commit",
    "pyjwt[crypto]",  # exercise the OIDC MCP auth path (arvel[jwt] in production)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
mypy_path = "src"
files = ["src"]

[[tool.mypy.overrides]]
module = ["any_llm.*", "jwt.*"]
ignore_missing_imports = true

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.importlinter]
root_package = "arvel_ai"
include_external_packages = true

# The light-import discipline, enforced in CI (same rule arvel core lives by):
# heavy engines never appear on the module import path — drivers lazy-import
# them inside the method that uses them. List each engine you add here.
# The anti-corruption layer, enforced: no engine type ever crosses into the
# public surface — any_llm exists only inside its own driver module,
# the openai_compatible driver goes through arvel's Http client,
# which wraps the engine.
[[tool.importlinter.contracts]]
name = "heavy engines stay out of the import path"
type = "forbidden"
source_modules = ["arvel_ai"]
forbidden_modules = ["any_llm", "httpx"]
# the ONLY sanctioned edge: the engine inside its own driver module, lazily
ignore_imports = [
    "arvel_ai.drivers.any_llm -> any_llm",
]
